--- a/brain-fm.html
+++ b/brain-fm.html
@@ -27,9 +27,9 @@
         <div class="horizontal-flexbox" style="justify-content: center; margin-top: 200px;">
             <div class="flex-direction: column;">
                 <div style="flex: 0 1 400px;">
-                    <p style="font-size: 30px;">Functional Music to Improve</p>
-                    <p style="font-size: 40px;">Focus in 15 Minutes</p>
-                    <p style="font-size: 20px;">Our science-first approach creates music that sounds <br>
+                    <p style="font-size: 20px; margin-bottom: -1em;">Functional Music to Improve</p>
+                    <p style="font-size: 25px; margin-bottom: 0em;">Focus in 15 Minutes</p>
+                    <p style="font-size: 15px;">Our science-first approach creates music that sounds <br>
                     different-and affects your brain differently-than any other <br>
                     music.</p>
                 </div>
@@ -37,16 +37,15 @@
                     <img src="./images/clout.png" alt="Cloud">    
                 </div>
                 <div style="padding-top: 20px;">
-                   <!-- <input type="button" value="Try 5 free                    sessions" class="buttons"> -->
-                   <button class="buttons" type="submit">Try 5 free <br> sessions</button>
+                   <button class="buttons" style="padding: 20px 70px;" type="submit">Try 5 free <br> sessions</button>
                 </div>
             </div>
             <div style="flex: 0 1 400px;">
-                <img src="./images/picture-1.gif" alt="A guy by computer" style="width: 150%; height: auto;">
+                <img src="./images/picture-1.gif" alt="A guy by computer" style="width: 155%; height: auto; transform: translate(100px -50px)">
             </div>
         </div>
 
-        <div style="text-align: center; font-size: 20px; padding: 150px 0px">
+        <div style="text-align: center; font-size: 20px; padding: 130px 0px">
             <p>Wanna see the science?</p>
         </div>
 
