--- a/brain-fm.html
+++ b/brain-fm.html
@@ -9,7 +9,7 @@
         <!-- Top area of the page -->
 
         <div class="horizontal-flexbox">
-            <div class="horizontal-flexbox" style="flex-grow: 2; justify-content: center;">
+            <div class="horizontal-flexbox" style="flex-grow: 2; justify-content: center; translate: -110px ;">
                 <img src="./images/logo.png" alt="Logo" style="margin: 10px;">
             </div>
             <div class="horizontal-flexbox" style="flex-grow: 1;">
@@ -25,11 +25,11 @@
         <!-- Mid area of the page -->
 
         <div class="horizontal-flexbox" style="justify-content: center; margin-top: 200px;">
-            <div class="flex-direction: column;">
+            <div class="flex-direction: column;" style="translate: -90px;"">
                 <div style="flex: 0 1 400px;">
-                    <p style="font-size: 20px; margin-bottom: -1em;">Functional Music to Improve</p>
-                    <p style="font-size: 25px; margin-bottom: 0em;">Focus in 15 Minutes</p>
-                    <p style="font-size: 15px;">Our science-first approach creates music that sounds <br>
+                    <p style="font-size: 25px; margin-bottom: -1em;">Functional Music to Improve</p>
+                    <p style="font-size: 30px; margin-bottom: 0em;">Focus in 15 Minutes</p>
+                    <p style="font-size: 20px;">Our science-first approach creates music that sounds <br>
                     different-and affects your brain differently-than any other <br>
                     music.</p>
                 </div>
@@ -41,7 +41,7 @@
                 </div>
             </div>
             <div style="flex: 0 1 400px;">
-                <img src="./images/picture-1.gif" alt="A guy by computer" style="width: 155%; height: auto; transform: translate(100px -50px)">
+                <img src="./images/picture-1.gif" alt="A guy by computer" style="width: 155%; height: auto; translate: -90px ;">
             </div>
         </div>
 
