--- a/brain-fm.html
+++ b/brain-fm.html
@@ -9,12 +9,12 @@
         <!-- Top area of the page -->
 
         <div class="horizontal-flexbox">
-            <div class="horizontal-flexbox" style="flex-grow: 2; justify-content: center; translate: -110px ;">
+            <div class="horizontal-flexbox" style="flex-grow: 2; justify-content: center; translate: -470px ;">
                 <img src="./images/logo.png" alt="Logo" style="margin: 10px;">
             </div>
-            <div class="horizontal-flexbox" style="flex-grow: 1;">
+            <div class="horizontal-flexbox" style="flex-grow: 1; translate: 230px ;">
                 <div style="flex-grow: 1;">
-                    <a href="https://my.brain.fm/signin">Sign In</a> 
+                    <a style="color:#e3e9e7;" href="https://my.brain.fm/signin">Sign In</a> 
                 </div>
                 <div style="flex-grow: 25;">
                     <input type="button" value="Try for free" class="buttons">
@@ -25,11 +25,11 @@
         <!-- Mid area of the page -->
 
         <div class="horizontal-flexbox" style="justify-content: center; margin-top: 200px;">      
-            <div class="flex-direction: column;" style="translate: -90px;"">
+            <div class="flex-direction: column;" style="translate: -300px;"">
                 <div style="flex: 0 1 400px;">
-                    <p style="font-size: 25px; margin-bottom: -1em;">Functional Music to Improve</p>
-                    <p style="font-size: 30px; margin-bottom: 0em;">Focus in 15 Minutes</p>
-                    <p style="font-size: 20px;">Our science-first approach creates music that sounds <br>
+                    <p style="font-size: 52px; margin-bottom: -1em;">Functional Music to Improve</p>
+                    <p style="font-size: 42px; margin-bottom: 0em;">Focus in 15 Minutes</p>
+                    <p style="font-size: 32px;">Our science-first approach creates music that sounds <br>
                     different-and affects your brain differently-than any other <br>
                     music.</p>
                 </div>
@@ -37,16 +37,17 @@
                 <div class="flex-direction: column;">
                     <img src="./images/clout.png" alt="Cloud">    
                 </div>
-                <div style="padding-top: 20px;">
+                <div style="padding-top: 10px;">
+                    <br /><br />
                    <button class="buttons" style="padding: 20px 70px;" type="submit">Try 5 free <br> sessions</button>
                 </div>
             </div>
-            <div style="flex: 0 1 400px;">
-                <img src="./images/picture-1.gif" alt="A guy by computer" style="width: 155%; height: auto; translate: -90px ;">
+            <div style="flex: 0 3 400px;">
+                <img src="./images/picture-1.gif" alt="A guy by computer" style="width: 245%; height: auto; translate: -230px ;">
             </div>
         </div>
 
-        <div style="text-align: center; font-size: 20px; padding: 130px 0px">
+        <div style="text-align: center; font-size: 25px; padding: 130px 0px">
             <p>Wanna see the science?</p>
         </div>
 
@@ -55,10 +56,10 @@
         <div class="horizontal-flexbox" style="justify-content: center;">
 
             <div class="flex-direction: column;">
-                <div style="flex: 0 1 400px;">
-                    <img src="./images/picture-2.gif" alt="A head">
+                <div style="flex: 1; height: 350px;">
+                    <img src="./images/picture-2.gif" alt="A head" style="width: 100%; height: 100%;">
                 </div>
-                <div style="flex: 0 1 400px;">
+                <div style="flex: 0 1 400px; font-size: 23px;">
                     <p><strong>Patented Technology</strong></p>
                     <p>Brain.fm holds patents on key processes for creating <br>
                     functional music, including technology to elicit <strong>strong neural <br>
@@ -73,10 +74,11 @@
             </div>
                         
             <div class="flex-direction: column;">
-                <div style="flex: 0 1 400px;">
-                    <img src="./images/picture-3.png" alt="Brains">
+                <div style="flex: 1;">
+                    <img src="./images/picture-3.png" alt="Brains" style="width: 65%; height: 100%; padding-left: 100px; padding-top: 50px;">
                 </div>
-                <div style="flex: 0 1 400px; padding-top: 60px;">
+                <div style="flex: 0 1 400px; padding-left: 100px; font-size: 23px;">
+                    <br />
                     <p><strong>Tested on Brain and Behavior</strong></p>
                     <p>Scientists at Brain.fm work with collaborators at academic<br>
                     institutions to run experiments.</p>
